# wut

./: .gitignore  MANIFEST.in  README.md  setup.cfg  wasure.py  wat.py  wut.py
benchmarks/coremark/: benchmarks.json
benchmarks/dhrystone/: benchmarks.json
benchmarks/dummy/: benchmarks.json  dummy.wasm  dummy.wat  param.wasm
benchmarks/helloworld/: benchmarks.json  helloworld.wasm
benchmarks/libsodium/: benchmarks.json
benchmarks/mibench/: benchmarks.json
benchmarks/ostrich/: benchmarks.json
benchmarks/wasi-features/: benchmarks.json  clocks.wasm  filesystem.wasm  http.wasm  http.wat  io.wasm  io.wat  keyvalue.wasm  nn.wasm  sockets.wat
benchmarks/wasi-proposals/: cli.wasm  clocks.wat  filesystem.wat  keyvalue.wat  nn.wat  random.wat  sockets.wasm
benchmarks/wasm-features/: benchmarks.json  bulk-memory.wasm  exceptions.wat  extended-const.wat  memory64.wasm  multi-memory.wasm  mutable-globals.wasm  mutable-globals.wat  reference-types.wasm  reference-types.wat  relaxed-simd.wasm  saturated-float-to-int.wasm  saturated-float-to-int.wat  (+3 more)
docs/: benchmarks-management.md  runtime-management.md  runtimes-management.md
installers/: jsc.json  spidermonkey.json  v8.json  wamr-aot.json  wamr-classic-int.json  wamr-fast-jit.json  wamr-llvm-jit.json  wamr-multi-jit.json  wamr.json  wasm2c.json  wasm3.json  wasmedge.json  wasmer.json  wasmi.json  wasmtime.json  wazero.json  wizard.json
runtimes/: runtimes.json
tools/: __init__.py  benchmarks.py  check.py  export.py  plot.py  run.py  runtime.py  runtimes.py  utils.py
wasure/: __main__.py  wasure.py
(+57 files in other folders)
