[metadata]
name = wasure
version = attr: wasure.wasure.VERSION_NUMBER
author = Riccardo Carissimi
description = A WebAssembly benchmarking suite for precise performance measurement
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r-carissimi/wasure
project_urls =
    Bug Tracker = https://github.com/r-carissimi/wasure/issues
classifiers =
        Environment :: Console
        Operating System :: MacOS
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: System :: Benchmark
license = GPL v.3
license_file = LICENSE
keywords = wasure, webassembly, wasm, benchmarking, performance, measurement

[options]
packages =
	wasure
	wasure.tools
python_requires = >=3.8
install_requires =
    matplotlib
    psutil
include_package_data = True

[options.entry_points]
console_scripts =
	wasure = wasure.wasure:main
